sitecore/sitecore-cd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitecore-cd-deployment
  namespace: sitecore
  labels:
    app: sitecore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitecore
  template:
    metadata:
      labels:
        app: sitecore
        role: cd
    spec:
      containers:
        - name: sitecore-cd
          image: scr.sitecore.com/sxp/sitecore-xp1-cd:10.0.0-ltsc2019
          ports:
            - name: web
              containerPort: 80
          resources:
            limits:
              memory: 8Gi
              cpu: 1
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: sitecore-cd-service
  namespace: sitecore
  labels:
    app: sitecore
    role: cd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
  selector:
    app: sitecore
    role: cd
