sitecore/sitecore-cm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitecore-cm
  labels:
    app: sitecore
    role: cm
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: sitecore
    role: cm
