sitecore/xconnect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xconnect-deployment
  namespace: sitecore
  labels:
    app: sitecore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitecore
  template:
    metadata:
      labels:
        app: sitecore
        role: xconnect
    spec:
      containers:
        - name: xconnect
          image: scr.sitecore.com/sxp/sitecore-xp0-xconnect:10.1-ltsc2019
          resources:
            limits:
              memory: 2Gi
              cpu: 500m
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: xconnect-service
  namespace: sitecore
  labels:
    app: sitecore
    role: xconnect
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
  selector:
    app: sitecore
    role: xconnect
