sitecore/xdbautomation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xdbautomation-deployment
  namespace: sitecore
  labels:
    app: sitecore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitecore
  template:
    metadata:
      labels:
        app: sitecore
        role: xdbautomation
    spec:
      containers:
        - name: xdbautomation
          image: scr.sitecore.com/sxp/sitecore-xp0-xdbautomationworker:10.0.0-ltsc2019
          resources:
            limits:
              memory: 500Mi
              cpu: 300m
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: xdbautomation-service
  namespace: sitecore
  labels:
    app: sitecore
    role: xdbautomation
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
  selector:
    app: sitecore
    role: xdbautomation
