sitecore/xdbsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xdbsearch-deployment
  namespace: sitecore
  labels:
    app: sitecore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitecore
  template:
    metadata:
      labels:
        app: sitecore
        role: xdbsearch
    spec:
      containers:
        - name: xdbsearch
          image: scr.sitecore.com/sxp/sitecore-xp0-xdbsearchworker:10.1-ltsc2019
          resources:
            limits:
              memory: 500Mi
              cpu: 300m
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: xdbsearch-service
  namespace: sitecore
  labels:
    app: sitecore
    role: xdbsearch
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
  selector:
    app: sitecore
    role: xdbsearch
