sitecore/sitecore-cm-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sitecore-ingress
spec:
  rules:
    - host: cm.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sitecore-cm-service
              servicePort: 80

    - host: cd.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sitecore-cd-service
              servicePort: 80

    - host: si.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sitecore-si-service
              servicePort: 80
