sitecore/sitecore-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sitecore-ingress
spec:
  rules:
    - host: cm.azure.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              serviceName: sitecore-cm-service
              servicePort: 80

    - host: cd.azure.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              serviceName: sitecore-cd-service
              servicePort: 80

    # - host: id.azure.com
    #   http:
    #     paths:
    #       - pathType: Prefix
    #         path: /
    #         backend:
    #           service:
    #             name: sitecore-id-service
    #             port:
    #               number: 80
